Fix jump position of navigation anchor

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -33,7 +33,7 @@
 } */
 
 #projects, #about, #resume, #contact {
-    scroll-margin-top: 3.5rem;
+    scroll-margin-top: calc(-50vh + 3.5rem);
 }
 
 .contact-button {
